--- a/estilo.css
+++ b/estilo.css
@@ -5,29 +5,13 @@ div.container{
     margin-left: 100px;
     margin-right: 100px;
 }
-div#telaGame{
-    position: relative;
+canvas{
+    display: block;
+    width: 800px; 
+    height: 500px;
     background-color: black;
-    height: 400px;
-    width: 600px;
     margin-left: auto;
     margin-right: auto;
-}
-div#p1{
-    position: absolute;
-    height: 100px;
-    width: 15px;
-    top: 150px;
-    margin-left: 5px;
-    background-color: white;
-}
-div#p2{
-    position: absolute;
-    height: 100px;
-    width: 15px;
-    top: 150px;
-    margin-left: 580px;
-    background-color: white;
 }
 div#bola{
     position: absolute;
